smaller UI, better cache

--- a/o3o/MainWindow1.xaml
+++ b/o3o/MainWindow1.xaml
@@ -6,7 +6,7 @@
         xmlns:l="clr-namespace:o3o"
         xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" 
         xmlns:cp="clr-namespace:DropDownCustomColorPicker"
-        Title="o3o" Height="700" Width="440" Background="White" WindowStyle="SingleBorderWindow" ResizeMode="CanResizeWithGrip" MinHeight="230" MinWidth="440" Margin="290" Icon="/o3o;component/Images/twitter_32.ico" MaxWidth="440" Closed="Window_Closed">
+        Title="o3o" Height="700" Width="400" Background="White" WindowStyle="SingleBorderWindow" ResizeMode="CanResizeWithGrip" MinHeight="230" MinWidth="400" Margin="290" Icon="/o3o;component/Images/twitter_32.ico" MaxWidth="400" Closed="Window_Closed">
     
         <Window.Resources>
         <ControlTemplate x:Key="GlassButton" TargetType="{x:Type Button}">
@@ -541,7 +541,7 @@
             <TabItem Name="SystemTab" BorderBrush="#00000000" Header="Settings">
                 <Grid >
                     <Button HorizontalAlignment="Left" Width="90" Height="25" Content="About o3o" Margin="6,0,0,24" VerticalAlignment="Bottom" Click="Button_Click" />
-                    <cp:CustomColorPicker SelectedColorChanged="colorpicker_SelectedColorChanged" x:Name="colorpicker" Width="40" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="210,45,0,0"></cp:CustomColorPicker>
+                    <cp:CustomColorPicker SelectedColorChanged="colorpicker_SelectedColorChanged" x:Name="colorpicker" Width="40" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="173,43,0,0"></cp:CustomColorPicker>
                     <Label Content="color for links(requires restart):" Height="18" HorizontalAlignment="Left" Margin="-1,45,0,0" Name="label1" VerticalAlignment="Top" Padding="0" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
@@ -552,37 +552,37 @@
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <CheckBox Checked="checkBox1_Checked" Unchecked="checkBox1_Unchecked" Content="" Height="16" HorizontalAlignment="Left" Margin="210,14,0,0" Name="checkBox1" VerticalAlignment="Top" />
+                    <CheckBox Checked="checkBox1_Checked" Unchecked="checkBox1_Unchecked" Content="" Height="16" HorizontalAlignment="Left" Margin="173,12,0,0" Name="checkBox1" VerticalAlignment="Top" />
                     <Label Content="Notification Sound:" Height="18" HorizontalAlignment="Left" Margin="0,84,0,0" Name="label3" Padding="0" VerticalAlignment="Top" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <ComboBox Height="23" HorizontalAlignment="Left" Margin="210,80,0,0" Name="soundselection" VerticalAlignment="Top" Width="168" SelectionChanged="soundselection_SelectionChanged">
+                    <ComboBox Height="23" HorizontalAlignment="Left" Margin="173,78,0,0" Name="soundselection" VerticalAlignment="Top" Width="168" SelectionChanged="soundselection_SelectionChanged">
                     </ComboBox>
-                    <Button Content="" Height="23" HorizontalAlignment="Left" Margin="384,80,0,0" Name="playbutton" VerticalAlignment="Top" Width="26" Click="playbutton_Click">
+                    <Button Content="" Height="23" HorizontalAlignment="Left" Margin="347,78,0,0" Name="playbutton" VerticalAlignment="Top" Width="26" Click="playbutton_Click">
                         <Button.Background>
                             <ImageBrush ImageSource="/o3o;component/Images/playback_play.png" />
                         </Button.Background>
                     </Button>
-                    <Button Content="Open File" Height="23" HorizontalAlignment="Left" Margin="210,109,0,0" Name="button1" VerticalAlignment="Top" Width="168" Click="button1_Click" />
-                    <Slider Height="23" Margin="225,138,0,0" Name="slider1" VerticalAlignment="Top" Value="20" UseLayoutRounding="False" Tag="Volume" ValueChanged="slider1_ValueChanged" Maximum="100" HorizontalAlignment="Left" Width="154" />
+                    <Button Content="Open File" Height="23" HorizontalAlignment="Left" Margin="173,107,0,0" Name="button1" VerticalAlignment="Top" Width="168" Click="button1_Click" />
+                    <Slider Height="23" Margin="188.077,136.462,0,0" Name="slider1" VerticalAlignment="Top" Value="20" UseLayoutRounding="False" Tag="Volume" ValueChanged="slider1_ValueChanged" Maximum="100" HorizontalAlignment="Left" Width="154" />
                     <Label Content="Volume:" Height="28" HorizontalAlignment="Left" Margin="-1,142,0,0" Name="label4" VerticalAlignment="Top" Padding="0" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="0" Height="28" Margin="205,138,0,0" Name="label5" VerticalAlignment="Top" Foreground="White" HorizontalAlignment="Left" Width="16">
+                    <Label Content="0" Height="28" Margin="168,136,0,0" Name="label5" VerticalAlignment="Top" Foreground="White" HorizontalAlignment="Left" Width="16">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="100" Height="28" Margin="384,138,0,0" Name="label6" VerticalAlignment="Top" Foreground="White" HorizontalAlignment="Left" Width="29">
+                    <Label Content="100" Height="28" Margin="347,136,0,0" Name="label6" VerticalAlignment="Top" Foreground="White" HorizontalAlignment="Left" Width="29">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Button Content="Clear User Data and Restart" Height="25" HorizontalAlignment="Right" Margin="155,0,0,24" Name="ClearUserDataButton" VerticalAlignment="Bottom" Width="155" Click="ClearUserDataButton_Click" />
+                    <Button Content="Clear User Data and Restart" Height="25" HorizontalAlignment="Right" Margin="0,0,6,24" Name="ClearUserDataButton" VerticalAlignment="Bottom" Width="155" Click="ClearUserDataButton_Click" />
                     <Label Content="Text balloonopacity:" Height="25" HorizontalAlignment="Left" Margin="-1,177,0,0" Name="label7" VerticalAlignment="Top" Padding="0" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
@@ -593,13 +593,13 @@
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </TextBox.Effect>
                     </TextBox>
-                    <Slider Height="23" Margin="225,172,0,0" Name="OpacitySlider" VerticalAlignment="Top" Value="0.6" Maximum="1" SmallChange="0.01" ValueChanged="OpacitySlider_ValueChanged" TickFrequency="0.1" HorizontalAlignment="Left" Width="154" />
-                    <Label Content="0" Margin="205,172,0,0" Name="label9" Foreground="White" HorizontalAlignment="Left" Width="16" Height="28" VerticalAlignment="Top">
+                    <Slider Height="23" Margin="188,170,0,0" Name="OpacitySlider" VerticalAlignment="Top" Value="0.6" Maximum="1" SmallChange="0.01" ValueChanged="OpacitySlider_ValueChanged" TickFrequency="0.1" HorizontalAlignment="Left" Width="154" />
+                    <Label Content="0" Margin="168,170,0,0" Name="label9" Foreground="White" HorizontalAlignment="Left" Width="16" Height="28" VerticalAlignment="Top">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="1" Height="28" Margin="384,172,0,0" Name="label10" VerticalAlignment="Top" Foreground="White" HorizontalAlignment="Left" Width="16">
+                    <Label Content="1" Height="28" Margin="347,170,0,0" Name="label10" VerticalAlignment="Top" Foreground="White" HorizontalAlignment="Left" Width="16">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
@@ -609,24 +609,24 @@
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </TextBox.Effect>
                     </TextBox>
-                    <Label Content="Amount of tweets to display:" Height="19" HorizontalAlignment="Left" Margin="-1,206,0,0" Name="label8" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White">
+                    <Label Content="Amount of tweets&#10; to display:" Height="34" HorizontalAlignment="Left" Margin="-1,206,0,0" Name="label8" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
 
-                    <TextBox Height="23" MaxLength="2" HorizontalAlignment="Left" Margin="159,208,0,0" Name="tweetsdisplayLabel" Text="{Binding Path=Value, ElementName=TweetsDisplaySlider}" VerticalAlignment="Top" Focusable="True" IsEnabled="True" IsReadOnly="True" Background="#00000000" BorderThickness="0" Width="32" TextChanged="volumeLabel_TextChanged" Foreground="White">
+                    <TextBox Height="23" MaxLength="2" HorizontalAlignment="Left" Margin="119,207,0,0" Name="tweetsdisplayLabel" Text="{Binding Path=Value, ElementName=TweetsDisplaySlider}" VerticalAlignment="Top" Focusable="True" IsEnabled="True" IsReadOnly="True" Background="#00000000" BorderThickness="0" Width="32" TextChanged="volumeLabel_TextChanged" Foreground="White">
                         <TextBox.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </TextBox.Effect>
                     </TextBox>
-                    <Slider Height="23" Margin="225,206,0,0" Name="TweetsDisplaySlider" VerticalAlignment="Top" Value="40" Maximum="200" SmallChange="1" TickFrequency="2" HorizontalAlignment="Left" Width="154" ValueChanged="TweetsDisplaySlider_ValueChanged" />
-                    <Label Content="0" Margin="205,206,0,0" Name="TweetsDisplayLabelLeft" Foreground="White" HorizontalAlignment="Left" Width="16" Height="28" VerticalAlignment="Top">
+                    <Slider Height="23" Margin="188,204,0,0" Name="TweetsDisplaySlider" VerticalAlignment="Top" Value="40" Maximum="200" SmallChange="1" TickFrequency="2" HorizontalAlignment="Left" Width="154" ValueChanged="TweetsDisplaySlider_ValueChanged" />
+                    <Label Content="0" Margin="168,204,0,0" Name="TweetsDisplayLabelLeft" Foreground="White" HorizontalAlignment="Left" Width="16" Height="28" VerticalAlignment="Top">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="200" Height="28" Margin="384,206,0,0" Name="TweetsDisplayLabelRight" VerticalAlignment="Top" Foreground="White" HorizontalAlignment="Left" Width="29">
+                    <Label Content="200" Height="28" Margin="347,204,0,0" Name="TweetsDisplayLabelRight" VerticalAlignment="Top" Foreground="White" HorizontalAlignment="Left" Width="29">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
@@ -637,20 +637,34 @@
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <ComboBox Height="23" Margin="210,246,0,0" Name="DisplaysComboBox" VerticalAlignment="Top" SelectionChanged="DisplaysComboBox_SelectionChanged" HorizontalAlignment="Left" Width="200" />
-                    <CheckBox Content="" Height="16" HorizontalAlignment="Left" Margin="210,275,0,0" Name="topmostcheckbox" VerticalAlignment="Top" Checked="topmostcheckbox_Checked" Unchecked="topmostcheckbox_Unchecked" />
-                    <Label Content="overlap other windows" Height="19" HorizontalAlignment="Left" Margin="226,273,0,0" Name="topmostlbl" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White"  >
+                    <ComboBox Height="23" Margin="173,244,0,0" Name="DisplaysComboBox" VerticalAlignment="Top" SelectionChanged="DisplaysComboBox_SelectionChanged" HorizontalAlignment="Left" Width="200" />
+                    <CheckBox Content="" Height="16" HorizontalAlignment="Left" Margin="173,273,0,0" Name="topmostcheckbox" VerticalAlignment="Top" Checked="topmostcheckbox_Checked" Unchecked="topmostcheckbox_Unchecked" />
+                    <Label Content="overlap other windows" Height="19" HorizontalAlignment="Left" Margin="189,271,0,0" Name="topmostlbl" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White"  >
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Label Content="Layout: (restarts o3o)" Height="19" HorizontalAlignment="Left" Margin="0,319,0,0" Name="lauoutlbl" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White"  >
+
+                    <Label Content="Show Notification popup:" Height="19" HorizontalAlignment="Left" Margin="-1,306,0,0" Name="notficlabel" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White">
                         <Label.Effect>
                             <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                         </Label.Effect>
                     </Label>
-                    <Button Content="Manage Accounts" Height="23" HorizontalAlignment="Right" Margin="155,0,0,55" Name="button_Manage_Accounts" VerticalAlignment="Bottom" Width="155" Click="button_Manage_Accounts_Click" />
-                    <RadioButton Height="83" HorizontalAlignment="Left" Margin="14,344,0,0" Name="LayoutButton1" VerticalAlignment="Top" Width="52">
+                    <Label Content="Play Notification Sound:" Height="19" HorizontalAlignment="Left" Margin="-1,326,0,0" Name="notficsoundlabel" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White">
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <CheckBox Content="" Height="16" HorizontalAlignment="Left" Margin="173,308,0,0" Name="PopupCheckBox" VerticalAlignment="Top" Checked="PopupCheckBox_Checked" Unchecked="PopupCheckBox_Unchecked"/>
+                    <CheckBox Content="" Height="16" HorizontalAlignment="Left" Margin="173,328,0,0" Name="SoundCheckBox" VerticalAlignment="Top" Checked="SoundCheckBox_Checked" Unchecked="SoundCheckBox_Unchecked"/>
+
+                    <Label Content="Layout: (restarts o3o)" Height="19" HorizontalAlignment="Left" Margin="0,408,0,0" Name="lauoutlbl" VerticalAlignment="Top" Padding="0,2,0,0" Foreground="White"  >
+                        <Label.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
+                        </Label.Effect>
+                    </Label>
+                    <Button Content="Manage Accounts" Height="23" HorizontalAlignment="Right" Margin="0,0,6,55" Name="button_Manage_Accounts" VerticalAlignment="Bottom" Width="155" Click="button_Manage_Accounts_Click" />
+                    <RadioButton Height="83" HorizontalAlignment="Left" Margin="14,433,0,0" Name="LayoutButton1" VerticalAlignment="Top" Width="52">
                         <Grid >
                             <Polygon Name="layputpoly1"
                                 Points="6,6 30,6 30,77 6,77 " Height="83" Width="36">
@@ -663,7 +677,7 @@
                             </Polygon>
                         </Grid>
                     </RadioButton>
-                    <RadioButton Height="83" HorizontalAlignment="Left" Margin="92,344,0,0" Name="LayoutButton2" VerticalAlignment="Top" Width="84">
+                    <RadioButton Height="83" HorizontalAlignment="Left" Margin="92,433,0,0" Name="LayoutButton2" VerticalAlignment="Top" Width="84">
                         <Grid >
                         <Polygon Name="layoutpolys2"
                                 Points="6,6 30,6 30,77 6,77 6,6" Height="83" Width="70">
@@ -685,7 +699,7 @@
                             </Polygon>
                         </Grid>
                     </RadioButton>
-                    <RadioButton Height="83" HorizontalAlignment="Left" Margin="192,344,0,0" Name="LayoutButton3" VerticalAlignment="Top" Width="113">
+                    <RadioButton Height="83" HorizontalAlignment="Left" Margin="192,433,0,0" Name="LayoutButton3" VerticalAlignment="Top" Width="113">
                         <Grid Width="96">
                             <Polygon Name="layoutpolys3"
                                 Points="6,6 30,6 30,77 6,77 6,6" Height="83" Width="70" HorizontalAlignment="Left">
@@ -716,6 +730,7 @@
                             </Polygon>
                         </Grid>
                     </RadioButton>
+                    
                 </Grid>
             </TabItem>
         </TabControl>
