--- a/o3o/notify.xaml
+++ b/o3o/notify.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:aero="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
-        Title="o3o" Height="150" Width="382" WindowStyle="ToolWindow" ShowInTaskbar="False" ResizeMode="CanResize" Background="White" ShowActivated="False" Topmost="True" MouseEnter="Window_MouseEnter" >
+        Title="o3o" Height="150" Width="382" WindowStyle="ToolWindow" ShowInTaskbar="False" ResizeMode="CanResize" Background="White" ShowActivated="False" Topmost="True" Activated="Window_Activated" >
     <Grid>
         <!--<TextBlock Text="" Height="63" HorizontalAlignment="Left" Name="text" VerticalAlignment="Top" Width="283" Margin="7,8,0,0" Foreground="Black" TextWrapping="Wrap" >
             <TextBlock.Effect>
