--- a/o3o/TweetElement.xaml
+++ b/o3o/TweetElement.xaml
@@ -42,9 +42,9 @@
                     <DropShadowEffect ShadowDepth="1" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                 </TextBlock.Effect>-->
         </TextBlock>
-        <TextBlock Text="Label" Height="20" HorizontalAlignment="Left" Margin="73,87,0,0" Name="label1" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="287" ForceCursor="True">
+        <TextBlock TextAlignment="Left" Text="Label" Height="20" HorizontalAlignment="Left" Margin="52,87,0,0" Name="label1" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="308" ForceCursor="True">
         </TextBlock>
-        <TextBlock MouseDown="datelabel_MouseDown" MouseEnter="datelabel_MouseEnter" MouseLeave="datelabel_MouseLeave" Text="-" Height="20" HorizontalAlignment="Left" Margin="26, 87, 0, 0" Name="datelabel" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="81" >
+        <TextBlock MouseDown="datelabel_MouseDown" MouseEnter="datelabel_MouseEnter" MouseLeave="datelabel_MouseLeave" Text="-" Height="20" HorizontalAlignment="Left" Margin="26,87,0,0" Name="datelabel" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="39" >
         </TextBlock>
 
         
@@ -85,7 +85,7 @@
 
         <TextBlock MouseDown="AtNameLabel_MouseDown" MouseEnter="linkMouseEnter" MouseLeave="linkMouseLeave" Text="Name" Height="17" HorizontalAlignment="Left" Margin="52,7,0,0" Name="NameLabel" VerticalAlignment="Top" Foreground="White" Padding="0" Width="177" FontStyle="Normal" FontWeight="SemiBold" FontSize="12">
         </TextBlock>
-        <TextBlock MouseDown="AtNameLabel_MouseDown" MouseEnter="linkMouseEnter" MouseLeave="linkMouseLeave" Text="@name" Height="17" Margin="0,7,52,0" Name="AtNameLabel" VerticalAlignment="Top" Foreground="#E3FFFFFF" Padding="0" HorizontalAlignment="Right" Width="113" FontSize="11">
+        <TextBlock MouseDown="AtNameLabel_MouseDown" MouseEnter="linkMouseEnter" MouseLeave="linkMouseLeave" Text="@name" Height="17" Margin="0,7,4,0" Name="AtNameLabel" VerticalAlignment="Top" Foreground="#E3FFFFFF" Padding="0" HorizontalAlignment="Right" Width="130" FontSize="11">
         </TextBlock>
     </Grid>
 
