--- a/o3o/TweetElement.xaml
+++ b/o3o/TweetElement.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="110" d:DesignWidth="360" Height="110"  Loaded="UserControl_Loaded" MouseEnter="UserControl_MouseEnter" MouseLeave="UserControl_MouseLeave" Name="tweetElement">
+             d:DesignHeight="110" d:DesignWidth="350" Height="110"  Loaded="UserControl_Loaded" MouseEnter="UserControl_MouseEnter" MouseLeave="UserControl_MouseLeave" Name="tweetElement">
     <UserControl.Resources>
         <Style TargetType="TextBlock" x:Key="glassText">
             <Setter Property="Foreground" Value="Black" />
@@ -32,9 +32,9 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid Width="360" Height="110" Name="tweetelementgrid">
+    <Grid Width="350" Height="110" Name="tweetelementgrid">
 
-        <TextBlock MouseRightButtonUp="TweetBlock_MouseRightButtonDown" Name="TweetBlock" Height="65" HorizontalAlignment="Left" Margin="52,24,0,0" Text="text" VerticalAlignment="Top" Width="304" Foreground="White" Background="Transparent" TextWrapping="Wrap" Padding="0" FontSize="13">
+        <TextBlock MouseRightButtonUp="TweetBlock_MouseRightButtonDown" Name="TweetBlock" Height="65" HorizontalAlignment="Left" Margin="52,24,0,0" Text="text" VerticalAlignment="Top" Width="294" Foreground="White" Background="Transparent" TextWrapping="Wrap" Padding="0" FontSize="13">
             <TextBlock.ContextMenu>
                 <ContextMenu x:Name="contextmenu">
             <MenuItem Header="copy" Click="MenuItem_Click"/>
@@ -42,14 +42,14 @@
                     <DropShadowEffect ShadowDepth="1" BlurRadius="5" Color="Black" Opacity="1" RenderingBias="Performance" />
                 </TextBlock.Effect>-->
         </TextBlock>
-        <TextBlock TextAlignment="Left" Text="Label" Height="20" HorizontalAlignment="Left" Margin="52,87,0,0" Name="label1" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="308" ForceCursor="True">
+        <TextBlock TextAlignment="Left" Text="" Height="20" HorizontalAlignment="Left" Margin="52,87,0,0" Name="label1" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="298" ForceCursor="True">
         </TextBlock>
         <TextBlock MouseDown="datelabel_MouseDown" MouseEnter="datelabel_MouseEnter" MouseLeave="datelabel_MouseLeave" Text="-" Height="20" HorizontalAlignment="Left" Margin="26,87,0,0" Name="datelabel" VerticalAlignment="Top" Foreground="#C2000000" Padding="0,1,0,0" Width="39" >
         </TextBlock>
 
         
         
-        <Border Name="replyimageborder" Width="16" Height="16" Margin="297,90,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
+        <Border Name="replyimageborder" Width="16" Height="16" Margin="287,90,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
             <Border.Effect>
                 <DropShadowEffect Color="White" Direction="-45"
                     ShadowDepth="0" BlurRadius="6" Opacity="0.7"/>
@@ -57,7 +57,7 @@
             <Image MouseEnter="replyBtn_MouseEnter" MouseLeave="replyBtn_MouseLeave" MouseDown="replyBtn_MouseDown" Visibility="Visible" Height="16"  Name="replyBtn" Stretch="Fill" VerticalAlignment="Top" Source="/o3o;component/Images/empty.png" Cursor="Hand" HorizontalAlignment="Left" Width="16" />
         </Border>
 
-        <Border Name="retweetimageborder" Width="16" Height="16" Margin="319,90,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
+        <Border Name="retweetimageborder" Width="16" Height="16" Margin="309,90,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
             <Border.Effect>
                 <DropShadowEffect Color="White" Direction="-45"
                     ShadowDepth="0" BlurRadius="6" Opacity="0.7"/>
@@ -65,7 +65,7 @@
             <Image MouseEnter="retweetBtn_MouseEnter" MouseLeave="retweetBtn_MouseLeave" Visibility="Visible" Height="16"  Name="retweetBtn" Stretch="Fill" VerticalAlignment="Top" Source="/o3o;component/Images/empty.png" Cursor="Hand" HorizontalAlignment="Left" Width="16" />
         </Border>
 
-        <Border Name="favimageborder" Width="16" Height="16" Margin="341,90,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
+        <Border Name="favimageborder" Width="16" Height="16" Margin="331,90,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
             <Border.Effect>
                 <DropShadowEffect Color="White" Direction="-45"
                     ShadowDepth="0" BlurRadius="6" Opacity="0.6"/>
